# snapkv-structured-docs

./: .gitignore  README.md  pyproject.toml
external_llms/: gpt_4o_mini.py
kvr/: config.py
kvr/analysis/: q1_attention_mass.py  q2_h2o_retention.py  q3_accuracy_corr.py  q4_layer_hetero.py
kvr/data/: pilot_corpus.py  synthetic_json.py  synthetic_xml.py  wikitable.py
kvr/eviction/: __init__.py  h2o.py  keep_mask.py  ls_masked_attention.py  masked_attention.py  role_conditional.py
kvr/instrumentation/: __init__.py  attention_hook.py  dump.py  scoring_recorder.py  windowed_recorder.py
kvr/structure/: __init__.py  align.py  dispatcher.py  json_parser.py  markdown_parser.py  (+2 more)
scripts/: 00_download_models.py  01_check_env.py  02_run_pilot.py  03_pilot_analysis.py  03a_relabel_dumps.py  04_pilot_figures.py  05_counterfactual_eviction.py  06_recent_window_eviction.py  07_plan2_figures.py  08_record_wikitable_long.py  09_principled_eviction.py  10_ls_eviction.py  11_ls_diagnostic.py  12_role_conditional.py  13_snapkv_role_conditional.py  14_plot_alpha_sweep.py  15_key_only_evicted.py  16_per_layer_alpha.py  17_role_probe.py  18_plot_combined_headline.py  19_pool_sweep_analysis.py  20_plot_pool_sweep.py  21_plot_over_oracle.py  22_sink_value_diagnostics.py  23_plot_ctx_scaling.py  24_regen_fig1_ieee.py  25_regen_combined_headline_ieee.py  _asweep_launcher.sh  _asweep_wikitable_launcher.sh  _base_ablation_runs.sh  _fair_rate_launcher.sh  _headline_rerun_sdpa.sh  _p1_runs.sh  _p2_runs.sh  _qwen_cf_chain.sh  _qwen_decode_bisect.py  _qwen_repro.py
tests/: test_config.py
(+20 files in other folders)
