[project]
name = "kvr"
version = "0.0.1"
description = "Schema-guided KV-cache sparsification — research code"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch==2.4.0",
    "transformers==4.45.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.44.0",
    "datasets>=3.0.0",
    "lark>=1.2.0",
    "polars>=1.10.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "azure-storage-blob>=12.20.0",
    "tqdm>=4.66.0",
    "numpy<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.6.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "gpu: requires GPU",
]
